--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,8 +20,11 @@
     <div id="changedPOSDiv"></div>
     <br>
     <button class="btn btn-primary" onclick="sendLocationToBackend();">Send Location to backend</button>
+    <button id="send">send greeting</button>
     <br>
     <div class="receivedDataFromBackend"></div>
+
+    <button class="btn btn-primary" onclick="sendMsgToPathVar();">Send msg to path variable</button>
 </div>
 </body>
 </html>
