--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,8 +20,8 @@
     <div id="changedPOSDiv"></div>
     <br>
     <button class="btn btn-primary" onclick="sendLocationToBackend();">Send Location to backend</button>
-    <button id="send">send greeting</button>
-    <br>
+    <button id="send" class="btn btn-secondary">send greeting</button>
+    <br><br>
     <div class="receivedDataFromBackend"></div>
 
     <button class="btn btn-primary" onclick="sendMsgToPathVar();">Send msg to path variable</button>
