added fetch detail js

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,15 @@
     <div class="receivedDataFromBackend"></div>
 
     <button class="btn btn-primary" onclick="sendMsgToPathVar();">Send msg to path variable</button>
+
+    <hr>
+    <hr>
+    <hr>
+
+    <div id="userDetailDiv">
+        
+    </div>
+
 </div>
 </body>
 </html>
