--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,8 @@
         
     </div>
 
-
+    <i>work under progress....</i>  <a href="https://github.com/spectre-ak/real-time-loc-app">Github</a>
+        <br><br>
     <!-- Azure map integration starts  -->
 
     <div id="myMap" style="position:relative;width:100%;min-width:290px;height:600px;"></div>
