--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,12 +24,10 @@
     <br><br>
     <div id="changedPOSDiv"></div>
     <br>
-    <button class="btn btn-primary" onclick="sendLocationToBackend();">Send Location to backend</button>
-    <button id="send" class="btn btn-secondary">send greeting</button>
+    <button class="btn btn-primary" onclick="sendLocationToBackend();">Send Location</button>
+
     <br><br>
     <div class="receivedDataFromBackend"></div>
-
-    <button class="btn btn-primary" onclick="sendMsgToPathVar();">Send msg to path variable</button>
 
     <hr>
     <hr>
